@@ -97,11 +97,22 @@ if { $tool == "gdb" } {
     # No hardware watchpoints
     set_board_info gdb,no_hardware_watchpoints 1
     # The command to use
-    set_board_info gdb_server_prog /bin/gdbserver
+    if { [info exists gdb_server_prog] } {
+	set_board_info gdb_server_prog $gdb_server_prog
+    } else {
+	set_board_info gdb_server_prog /bin/gdbserver
+    }
     # Use a GDB stub
     set_board_info use_gdb_stub 1
 
     # Set up sysroot. This is an option relating to the host running GDB, not
     # the board, hence the contortion.
-    set board_info([get_local_hostname],gdb_opts) "-x $env(ARC_GDB_COMMFILE)"
+    if { [info exists env(ARC_GDB_COMMFILE)] } {
+	set board_info([get_local_hostname],gdb_opts) "-x $env(ARC_GDB_COMMFILE)"
+    } elseif { [info exists toolchain_sysroot_dir)] } {
+	set board_info([get_local_hostname],gdb_opts) "-ex 'set sysroot $toolchain_sysroot_dir'"
+    } else {
+	puts "Neither ARC_GDB_COMMFILE, not toolchain_sysroot_dir environment
+variables are specified. Some tests are likely to fail."
+    }
 }
