@@ -9,6 +9,11 @@
 
 	* run-tests.sh: Remove typo from comment and help text.
 
+2015-01-29  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* dejagnu/baseboards/arc-linux-generic.exp: Allow sysroot to be passed
+	directly.
+
 2015-01-22  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* arc-external.sh: Use different GMP link.
